<resources>
    <string name="accept">Aceptar</string>
    <string name="app_name">Psi Juego</string>
    <string name="before_end">¡Ya casi has terminado!</string>
    <string name="before_starting">Antes de empezar</string>
    <string name="cancel">Cancelar</string>
    <string name="cancel_supporting_text">Perderás toda la información cargada hasta el momento</string>
    <string name="require_permissions_supporting_text">¿Desea configurarlos?</string>
    <string name="categories_failed">Se produjo un error al cargar las categorías.</string>
    <string name="categories_not_found">No se encontraron categorías.</string>
    <string name="confirm_cancel">¿Desea cancelar?</string>
    <string name="permission_required">Se requieren los permisos de fotos y videos.</string>
    <string name="confirm_continue">¿Desea continuar?</string>
    <string name="confirm_new_report">¿Desea empezar un nuevo informe?</string>
    <string name="conclusions">Conclusiones</string>
    <string name="continue_supporting_text">No podrás volver para realizar cambios en el informe.\nRevisa antes de continuar.</string>
    <string name="draw_and_description">Dibujo y descripción realizados</string>
    <string name="draw_description">Narrativa del dibujante</string>
    <string name="email">Correo electrónico</string>
    <string name="images">Imágenes</string>
    <string name="invalid_field">Campo obligatorio</string>
    <string name="more">Ver más</string>
    <string name="name_qr_bottom">Generar informe</string>
    <string name="new_qr">Generar código QR</string>
    <string name="not_connection">No hay conexión a internet</string>
    <string name="patient_age">Edad del dibujante</string>
    <string name="patient_name">Nombre del dibujante</string>
    <string name="patient_name_hint">Nombre del dibujante (Requerido)</string>
    <string name="professional_name">Nombre del profesional</string>
    <string name="professional_name_hint">Nombre del profesional (Requerido)</string>
    <string name="qr_code">Código QR</string>
    <string name="qr_created">Ya puedes crear tu código QR</string>
    <string name="qr_failed">Ocurrió algo inesperado, no se pudo generar el código QR.</string>
    <string name="qr_ready">¡Ya está listo tu código QR! \nEscanéalo para acceder al informe</string>
    <string name="qr_saved">El código QR se ha guardado en la carpeta de descargas</string>
    <string name="report">Informe</string>
    <string name="report_conclusions">Conclusiones del informe</string>
    <string name="report_saved">El informe se ha guardado en la carpeta de descargas</string>
    <string name="report_title">Informe del análisis</string>
    <string name="save">Guardar</string>
    <string name="share">Compartir</string>
    <string name="supporting_conclusions_text">Antes de generar el informe, puedes dejar algunas conclusiones</string>
    <string name="upload_file_failed">Se produjo un error al cargar el archivo</string>
    <string name="whatsapp_name">WhatsApp</string>
</resources>