<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.psijuego.ui.views.report.conclusions.ConclusionsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryContainer"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/conclusions"
            app:titleCentered="true"
            app:titleTextAppearance="@style/MyToolbarTitleStyle" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp40"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/before_end"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/sp24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp12"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/supporting_conclusions_text"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp16"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_header"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header" />

    <EditText
        android:id="@+id/tvConclusion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp64"
        android:hint="@string/report_conclusions"
        android:minWidth="@dimen/dp48"
        app:layout_constraintBottom_toTopOf="@+id/btnQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp32"
        android:layout_marginBottom="@dimen/dp16"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/name_qr_bottom"
        android:textSize="@dimen/sp16"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp32"
        android:layout_marginBottom="@dimen/dp32"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/cancel"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="@dimen/sp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>