<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.psijuego.ui.views.report.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="@dimen/dp16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp24"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/saint_regus_semi_bold"
            android:text="@string/app_name"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp20" />
    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp56"
        android:padding="@dimen/dp16"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp32"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/before_starting"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/sp32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvPatientNameLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp32"
                android:hint="@string/patient_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvPatientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textCapWords"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/hint_text_color_dark_gray"
                    android:textSize="@dimen/sp14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvProfessionalNameLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:hint="@string/professional_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPatientNameLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvProfessionalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textCapWords"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/hint_text_color_dark_gray"
                    android:textSize="@dimen/sp14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvRegistrationNumberLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:hint="@string/patient_age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProfessionalNameLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvRegistrationNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="number"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/hint_text_color_dark_gray"
                    android:textSize="@dimen/sp14" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp32"
                android:text="Adjuntar dibujo"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/md_theme_light_primary"
                app:icon="@drawable/ic_upload_file"
                app:iconTint="@color/md_theme_light_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRegistrationNumberLabel" />

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/dp184"
                android:layout_height="@dimen/dp184"
                android:layout_marginTop="@dimen/dp48"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRegistrationNumberLabel"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="@dimen/dp24"
                android:layout_height="@dimen/dp24"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/ivImage"
                app:layout_constraintTop_toTopOf="@id/ivImage"
                app:srcCompat="@drawable/ic_delete" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvDescriptionLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp32"
                android:hint="@string/draw_description"
                app:layout_constraintBottom_toTopOf="@+id/btnNext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnUpload">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/hint_text_color_dark_gray"
                    android:textSize="@dimen/sp14" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp32"
                android:layout_marginBottom="@dimen/dp32"
                android:fontFamily="@font/roboto_medium"
                android:text="Siguiente"
                android:textSize="@dimen/sp16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>